# dpo2u-stellar

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
contracts/anticorruption-attestation/: Cargo.toml  Makefile
contracts/anticorruption-attestation/src/: lib.rs  test.rs
contracts/anticorruption-attestation/test_snapshots/test/: authorize_can_revoke.1.json  authorize_submitter_admin_only.1.json  constructor_sets_admin.1.json  register_attestation_happy_path.1.json  register_blocked_when_submitter_not_authorized.1.json  register_blocked_when_use_case_inactive.1.json  register_blocked_when_use_case_unknown.1.json  register_idempotent_revert_on_duplicate.1.json
docs/: DPIA-Piloto-Anticorrupcao-v0.1.md  DPO2U_PRD_Piloto_Anticorrupcao_v0.2.docx  DPO2U_PRD_Piloto_Anticorrupcao_v0.3.docx  GRANT_APPLICATION.md  GTM_PLAN.md  MAINNET-CEREMONY.md  MONETIZATION.md  RUNBOOK.md  SECURITY_AUDIT.md  STELLAR37-ROADMAP.md  THREAT-MODEL-Piloto-v0.1.md  X402_DECISION.md  X402_INTEGRATION.md  mainnet-readiness-checklist.md
docs/demos/: 2026-05-14-testnet-anchor-roundtrip.md
docs/demos/runs/: 2026-05-14T12-37-47-roundtrip.json
docs/sales-pack/: README.md  overview.md  pilot-terms.md  roi.md
scripts/: canary-compare.sh  demo-testnet-roundtrip.sh  deploy-mainnet.sh  deploy-testnet.sh  deploy.json
sdk/: README.md  package-lock.json  package.json
sdk/src/: AttestationClient.ts  cli.ts  decoder.ts  index.ts  types.ts
sdk/src/__tests__/: AttestationClient.test.ts  cli.test.ts  decoder.test.ts
